# passwordManager

./: .gitignore  CMakeLists.txt  LICENSE  README.md  build.bat
.github/workflows/: Build-Test.yml  cmake-single-platform.yml
Requirements/: SwRequirements.txt
architecture/: architecture.md  uml.md  uml.txt
include/: CLI.h  CredentialData.h  CredentialManager.h  ICredentialService.h  IVaultManager.h  SecurityManager.h  VaultManager.h  crypto.h  secureString.h
src/: CLI.cpp  CredentialManager.cpp  SecurityManager.cpp  VaultManager.cpp  crypto.cpp  main.cpp
tests/: CMakeLists.txt
tests/credential_manager/: test_credential_manager.cpp
tests/credential_manager/mocks/: mock_vault_manager.cpp  mock_vault_manager.h
tests/vault_manager/: test_vault_manager.cpp
tests/vault_manager/mocks/: mock_dependencies.cpp  mock_dependencies.h
